# rancid-git

./: .cloginrc.sample  .gitignore  .travis.yml  BUGS  CHANGES  COPYING  FAQ  INSTALL  Makefile.am  Makefile.in  README  README.git  README.lg  Todo  UPGRADING  acconfig.h  acinclude.m4  aclocal.m4  cloginrc.sample  configure  configure.ac  configure.in  configure.vers  index.html  mkinstalldirs  rancid-git.spec  update-spec.sh
debian/: README.Debian  changelog  control  copyright  cron.example  rancid-cgi.apache2  rancid-cgi.cron  rancid-cgi.dirs  rancid-cgi.docs  rancid-cgi.examples  rancid-cgi.logrotate  rancid-cgi.postinst  rancid-cgi.preinst  rancid-git.cron.d  rancid-git.docs  rancid-git.examples  rancid-git.links  rancid-git.postinst  rancid-git.templates  rancid-lg.conf  rancid.config  rancid.dirs  rancid.docs  rancid.preinst  rules  watch
debian/patches/: 00list  01_git.dpatch
debian/po/: POTFILES.in  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pt.po  ru.po  sv.po  templates.pot  vi.po
etc/: Makefile.am  Makefile.in  lg.conf.sample.in  rancid.conf.sample.in  rancid.types.base  rancid.types.conf
include/: Makefile.am  Makefile.in  config.h  config.h.in  version.h  version.h.in
lib/: Makefile.am  Makefile.in  arbor.pm.in  ciscowlc.pm.in  dell.pm.in  eos.pm.in  foundry.pm.in  ios.pm.in  iosxr.pm.in  junos.pm.in  mrv.pm.in  nxos.pm.in  panos.pm.in  rancid.pm.in
man/: Makefile.am  Makefile.in  clogin.1  cloginrc.5  control_rancid.1  create_cvs.1  do-diffs.1  env.5.in  lg.conf.5.in  lg_intro.1.in  par.1  pfrancid.1  plogin.1  rancid-cvs.1  rancid-run.1  rancid.1  rancid.3.in  rancid.conf.5.in  rancid.types.base.5  rancid.types.conf.5.in  rancid_intro.1  router.db.5
share/: Makefile.am  Makefile.in  README.misc  cisco-load.exp  cisco-reload.exp  downreport.in  getipacctg  index.html  lgnotes.html  rancid-cvspurge.in  rancid-git.spec  rancid.spec  rtrfilter.in
util/: Makefile.in  README  cisco-load.exp  cisco-reload.exp  configure  configure.in  downreport.in  getipacctg.in  rtrfilter  rtrfilter.README  rtrfilter.in
util/lg/: Makefile.in  README  configure  configure.in  index.html  lg.cgi.in  lg.conf.in  lgform.cgi.in  lgnotes.html
